--- a/Currency_WebApp/converter/templates/result.html
+++ b/Currency_WebApp/converter/templates/result.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Results</title>
+  <p>here is it {{result}}</p>
 </head>
 <body>
   
